# exsys_usb_hub

./: README.md  exsys_cli.py  exsys_hub.yaml  package.xml  pyproject.toml  setup.cfg  setup.py  setup.sh
archive/: hacs.json
archive/custom_components/exsys_usb_hub/: __init__.py  button.py  config_flow.py  const.py  device.py  icons.json  manifest.json  strings.json  switch.py
archive/legacy_standalone/: exsys_cli.py  pyproject.toml
archive/legacy_standalone/exsys_hub/: config.py  hub.py
config/: exsys_hub.yaml  exsys_hub_multi.yaml
docs/: development-history.md  uhubctl-vbus-analysis.md  validation-report.md
exsys_hub/: __init__.py  hub.py
exsys_usb_hub/: package.xml  setup.py
exsys_usb_hub/config/: exsys_hub_multi.yaml
exsys_usb_hub/exsys_usb_hub/core/: errors.py  protocol.py
exsys_usb_hub/exsys_usb_hub/ros/: node.py
exsys_usb_hub/launch/: exsys_hub.launch.py  exsys_hub_multi.launch.py
exsys_usb_hub/src/exsys_usb_hub/: __init__.py  cli.py
exsys_usb_hub/src/exsys_usb_hub/core/: __init__.py  manager.py  transport.py
exsys_usb_hub/src/exsys_usb_hub/ros/: __init__.py  node.py
exsys_usb_hub/test/: conftest.py  test_cli.py  test_manager.py  test_node.py  test_protocol.py
exsys_usb_hub_interfaces/msg/: HubStatus.msg  PortState.msg
exsys_usb_hub_interfaces/srv/: SetPort.srv
exsys_usb_hub_msgs/: CMakeLists.txt  package.xml
launch/: exsys_hub.launch.py  exsys_hub_multi.launch.py
src/exsys_usb_hub/core/: __init__.py  config.py  errors.py  transport.py
test/: conftest.py  fakes.py  test_config.py  test_node.py  test_transport.py
(+3 files in other folders)
